@@ -1,3 +1,9 @@
+Mon Feb 22 18:33:55 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/unicode/case-folding.rb, casefold.h: Adding flag for title-case,
+	  not yet operational.
+	  (with Kimihito Matsui)
+
 Mon Feb 22 18:17:03 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* enc/unicode/case-folding.rb, casefold.h: Fixed bug that avoided inclusion
